--- a/public/doku/metaModel/trunk/content/sections/Metamodell_Objects.tex
+++ b/public/doku/metaModel/trunk/content/sections/Metamodell_Objects.tex
@@ -5,8 +5,8 @@ Im Folgenden werden die Anpassungen der Klasse \term{Object} und deren Methoden 
 
 \subsubsection{Änderungen und neue Methoden}
 Die Klasse \term{Object} wurde wie viele Klassen im Goja-Modell um den Präfix \qq{M} erweitert um Verwechselungen mit der Klasse \term{java.lang.Object} zu vermeiden.
-Desweiteren wurde der Klasse die Methode \term{getProductType()} hinzugefügt, die ein TypeConjunction liefert.
-Diese TypeConjunction repräsentiert die Produkttypen des Objekts, der implizit durch die Assoziation \term{types} dargestellt wird.
+Des Weiteren wurde der Klasse die Methode \term{getProductType()} hinzugefügt, die eine \term{TypeConjunction} liefert.
+Diese \term{TypeConjunction} repräsentiert den Produkttypen des Objekts, der implizit durch die Assoziation \term{types} dargestellt wird.
 
 \subsubsection{Löschen}
 Das Löschen von \term{Object}-Exemplaren funktioniert wie auch sonst im System über die Klasse \term{ModelItem}.
