--- a/public/doku/metaModel/trunk/content/sections/Metamodell_Types.tex
+++ b/public/doku/metaModel/trunk/content/sections/Metamodell_Types.tex
@@ -165,10 +165,7 @@ Komplexe Typen werden grundsätzlich \term{delayedPersistent} erstellt und werde
 Typen, die als Rückgabewerte für Operationen auf \term{ModelItem}s (z.B. \term{fetchProductType} auf \term{AbstractObject}) erzeugt werden, 
 werden in der Regel nicht persistiert. 
 
-\textbf{Abhängige Elemente}
-\begin{itemize}
-	\item Siehe Typabstraktion.
-\end{itemize}
+Auf \textbf{abhängige Elemente} wird im folgenden Abschnitt eingegangen.
 
 \subsubsection{Typabstraktion}
 Die Klasse \term{Type} abstrahiert von atomaren und komplexen Typen. Um die inverse Richtung der spezialisierten Assoziation 
