--- a/public/doku/metaModel/trunk/content/sections/Metamodell_Objects.tex
+++ b/public/doku/metaModel/trunk/content/sections/Metamodell_Objects.tex
@@ -27,7 +27,7 @@ Dazu wurde die Types Assoziation in den konkreten Klassen hinterlegt, wobei Sing
 Entsprechend sind auch die Operationen zum Hinzufügen, Ändern und Entfernen von Typen nur in der Klasse \term{Object} zu finden.
 
 Kritik:
-Diese Designentscheidung ist kritisch zu betrachten. Dadurch, dass Objekte in der späteren Anwendung immer Exeplare entweder von MObject oder MSingeltonObject sind,
-ist ein Ändern des Attributs \qq{singleton} an Exemplaren des Typs MAtomicTypes kritisch. Dies führt dazu, dass die Exemplare der Objekte weggeschmissen werden müssen.
+Diese Designentscheidung ist kritisch zu betrachten. Dadurch, dass Objekte in der späteren Anwendung immer Exeplare entweder von \term{Object} oder \term{SingletonObject} sind,
+ist ein Ändern des Attributs \qq{singleton} an Exemplaren des Typs \term{AtomicType} kritisch. Dies führt dazu, dass die Exemplare der Objekte weggeschmissen werden müssen.
 Dies ist ins besondere bei Refactorings, die Singletons entfernen (wie z.B. beim Implemetieren von Mandantenfähigkeit) problematisch.
 Es ist ratsam in einer späteren Version dieses Problem etwa mit einem \qq{State}-Pattern zu vermeiden.
