--- a/public/doku/metaModel/trunk/content/sections/Metamodell_Operation.tex
+++ b/public/doku/metaModel/trunk/content/sections/Metamodell_Operation.tex
@@ -86,7 +86,7 @@ Die Möglichkeit der Zuweisung von Formalparametern an Assoziationen wird dem An
 Der AssoziationManager bietet sechs transaktionale Operationen an und beinhaltet zwei Listen, welche er verwaltet.
 \begin{description}
 \item[Association ** associations] In dieser Liste werden alle erstellten Assoziationen aufbewahrt und durch entsprechende Operationen verwaltet.
-\item[Hierarchy ** hierarchies] Alle erstellten Hierarchien werden in dieser Liste abgelegt.
+\item[Hierarchy ** hierarchies] Erstellte Hierarchien werden in dieser Liste abgelegt.
 \end{description}
 Diese beiden Listen werden dem Anwender an der 
 Oberfläche präsentiert. Über entsprechende Operationen kann der Anwender die Elemente dieser Listen verwalten.
