--- a/public/doku/metaModel/trunk/content/sections/Metamodell_Messages.tex
+++ b/public/doku/metaModel/trunk/content/sections/Metamodell_Messages.tex
@@ -1,4 +1,4 @@
-\subsection{Messages und Links}\label{Message:Message}
+\subsection{Message und Link}\label{Message:Message}
 
 Messages und Links haben eine gemeinsame Oberklasse MessageOrLink (siehe \refImg{img_operation}). 
 In der ersten Ausbaustufe werden lediglich die Links implementiert. Zu den Messages existiert eine rudimentäre
