--- a/public/doku/metaModel/trunk/content/sections/Metamodell_Observation.tex
+++ b/public/doku/metaModel/trunk/content/sections/Metamodell_Observation.tex
@@ -1,4 +1,4 @@
-\subsection{Observations}\label{Observations}
+\subsection{Observation}\label{Observations}
 In der ursprünglichen Modellierung handelte es sich bei einer Observation um eine Assoziation bei der das Ziel auf einen 
 Typ zeigte, der nur aus Singletons bestand. Damit dies aber möglich ist, müssen in der Typ-Hierarchie alle Knoten 
 abstrakt und alle Blätter Singletons sein. Diese Bedingung muss aber für allgemeine Singletons nicht gelten. Um an dieser 
