--- a/public/doku/metaModel/trunk/content/sections/Metamodell_Operation.tex
+++ b/public/doku/metaModel/trunk/content/sections/Metamodell_Operation.tex
@@ -1,4 +1,4 @@
-\subsection{Operations und Associations}
+\subsection{Operation und Association}
 
 Zur Abbildung von Operationen und Assoziationen wurde im Zuge der Projektarbeit die Klasse \term{AbstractOperation} entwickelt von der sowohl Operation als auch Assoziation erben. 
 Da es sich bei Assoziationen um spezielle, parameterlose Operationen handelt, wurde eine gemeinsame Oberklasse gewählt.
