--- a/public/doku/metaModel/trunk/content/sections/Metamodell_Types.tex
+++ b/public/doku/metaModel/trunk/content/sections/Metamodell_Types.tex
@@ -1,4 +1,4 @@
-\subsection{Typesystem}
+\subsection{Type}
 Das Typsystem ist die zentrale Komponente des Metamodells. Im folgenden Abschnitt sind die 
 Änderungen bezüglich des in der Vorlesung erarbeiteten Modells kurz zusammengefasst.
 
@@ -16,7 +16,7 @@ Obertypen mehr besitzt. Folgende Möglichkeiten wurden in der Entwurfsphase betr
 \begin{enumerate}
   		\item superType Assoziation mit Multiplizität $0..1$.
 		\item State-Pattern für atomare Typen \(state \in \{rootType, subType\}\).
-        \item automatisch mitgenerierte Obertypen für Aspekte.
+        \item Automatisch mitgenerierte Obertypen für Aspekte.
         \item Interface über Anything und AtomicType.
 \end{enumerate}
 
